Uploaded image for project: 'Geode'
  1. Geode
  2. GEODE-10402

Fix FunctionException handling

    XMLWordPrintableJSON

Details

    Description

      GIVEN a ServerFunction throwing a FunctionException
      WHEN its executed
      THEN a CacheServerException is thrown rather FunctionException


      Additional info. FunctionException seems not to be handled, that's why the default handling exception is thrown by the native API, CacheServerException

      Attachments

        Issue Links

          Activity

            People

              gaussianrecurrence Mario Salazar de Torres
              gaussianrecurrence Mario Salazar de Torres
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated: