GEODE-10402: Fix FunctionException handling

- Fixed handling for FunctionException.
 - Added InternalFunctionInvocationTargetException and replaced
   GF_FUNCTION_EXCEPTION by
   GF_INTERNAL_FUNCTION_INVOCATION_TARGET_EXCEPTION, so function
   exceptions are properly handled.
 - Code modified to adapt to the above changes.