cppcache/src/ExceptionTypes.cpp
@@ -42,10 +42,11 @@ using apache::geode::client::DuplicateDurableClientException;
 using apache::geode::client::EntryDestroyedException;
 using apache::geode::client::EntryExistsException;
 using apache::geode::client::EntryNotFoundException;
-using apache::geode::client::FunctionExecutionException;
+using apache::geode::client::FunctionException;
 using apache::geode::client::GeodeIOException;
 using apache::geode::client::IllegalArgumentException;
 using apache::geode::client::IllegalStateException;
+using apache::geode::client::InternalFunctionInvocationTargetException;
 using apache::geode::client::LeaseExpiredException;
 using apache::geode::client::LowMemoryException;
 using apache::geode::client::MessageException;
@@ -316,11 +317,21 @@ using apache::geode::client::UnknownException;
   throw AllConnectionsInUseException{message};
 }
 
-[[noreturn]] void functionExecutionException(std::string message,
-                                             std::string& exMsg, GfErrType,
-                                             std::string) {
+[[noreturn]] void internalFunctionExecutionException(std::string message,
+                                                     const std::string& exMsg,
+                                                     GfErrType, std::string) {
+  message.append(
+      !exMsg.empty()
+          ? exMsg
+          : ": Internal function invocation target execution failed");
+  throw InternalFunctionInvocationTargetException{message};
+}
+
+[[noreturn]] void functionException(std::string message,
+                                    const std::string& exMsg, GfErrType,
+                                    std::string) {
   message.append(!exMsg.empty() ? exMsg : ": Function execution failed");
-  throw FunctionExecutionException{message};
+  throw FunctionException{message};
 }
 
 [[noreturn]] void diskFailureException(std::string message, std::string& exMsg,
@@ -440,7 +451,9 @@ std::map<GfErrType, error_function_t>& get_error_map() {
       {GF_REMOTE_QUERY_EXCEPTION, queryException},
       {GF_CACHE_LOCATOR_EXCEPTION, noAvailableLocatorsException},
       {GF_ALL_CONNECTIONS_IN_USE_EXCEPTION, allConnectionsInUseException},
-      {GF_FUNCTION_EXCEPTION, functionExecutionException},
+      {GF_INTERNAL_FUNCTION_INVOCATION_TARGET_EXCEPTION,
+       internalFunctionExecutionException},
+      {GF_FUNCTION_EXCEPTION, functionException},
       {GF_DISKFULL, diskFailureException},
       {GF_ROLLBACK_EXCEPTION, rollbackException},
       {GF_COMMIT_CONFLICT_EXCEPTION, commitConflictException},
