cppcache/integration/test/FunctionExecutionTest.cpp
@@ -44,12 +44,17 @@ using apache::geode::client::CacheFactory;
 using apache::geode::client::CacheImpl;
 using apache::geode::client::CacheRegionHelper;
 using apache::geode::client::Exception;
-using apache::geode::client::FunctionExecutionException;
+using apache::geode::client::FunctionException;
 using apache::geode::client::FunctionService;
+using apache::geode::client::InternalFunctionInvocationTargetException;
 using apache::geode::client::NotConnectedException;
 using apache::geode::client::Region;
 using apache::geode::client::RegionShortcut;
 using apache::geode::client::ResultCollector;
+
+using ::testing::Eq;
+using ::testing::Le;
+
 const int ON_SERVERS_TEST_REGION_ENTRIES_SIZE = 34;
 const int PARTITION_REGION_ENTRIES_SIZE = 113;
 
@@ -103,7 +108,7 @@ TEST(FunctionExecutionTest, UnknownFunctionOnServer) {
 
   ASSERT_THROW(FunctionService::onServer(region->getRegionService())
                    .execute("I_Don_t_Exist"),
-               FunctionExecutionException);
+               FunctionException);
 }
 
 TEST(FunctionExecutionTest, UnknownFunctionOnRegion) {
@@ -122,7 +127,7 @@ TEST(FunctionExecutionTest, UnknownFunctionOnRegion) {
   auto region = setupRegion(cache);
 
   ASSERT_THROW(FunctionService::onRegion(region).execute("I_Don_t_Exist"),
-               FunctionExecutionException);
+               FunctionException);
 }
 
 TEST(FunctionExecutionTest, UnknownFunctionAsyncOnServer) {
@@ -143,7 +148,7 @@ TEST(FunctionExecutionTest, UnknownFunctionAsyncOnServer) {
   ASSERT_THROW(FunctionService::onServer(region->getRegionService())
                    .withCollector(std::make_shared<TestResultCollector>())
                    .execute("I_Don_t_Exist"),
-               FunctionExecutionException);
+               FunctionException);
 }
 
 TEST(FunctionExecutionTest, UnknownFunctionAsyncOnRegion) {
@@ -164,7 +169,7 @@ TEST(FunctionExecutionTest, UnknownFunctionAsyncOnRegion) {
   ASSERT_THROW(FunctionService::onRegion(region)
                    .withCollector(std::make_shared<TestResultCollector>())
                    .execute("I_Don_t_Exist"),
-               FunctionExecutionException);
+               FunctionException);
 }
 
 TEST(FunctionExecutionTest,
@@ -357,7 +362,7 @@ TEST(FunctionExecutionTest, testThatFunctionExecutionThrowsExceptionNonHA) {
   auto execute =
       functionService.withCollector(std::make_shared<TestResultCollector>());
   ASSERT_THROW(execute.execute("MultiGetAllFunctionNonHA"),
-               FunctionExecutionException);
+               InternalFunctionInvocationTargetException);
 }
 
 TEST(FunctionExecutionTest,
@@ -416,7 +421,7 @@ TEST(FunctionExecutionTest,
       functionService.withCollector(std::make_shared<TestResultCollector>())
           .withFilter(filter);
   ASSERT_THROW(execute.execute("MultiGetAllFunctionNonHA"),
-               FunctionExecutionException);
+               InternalFunctionInvocationTargetException);
 }
 
 TEST(FunctionExecutionTest, OnServersWithReplicatedRegionsInPool) {
